src/test/ui/suggestions/suggest-closure-return-type-1.stderr
error[E0282]: type annotations needed for the closure `fn() -> [_; 0]`
  --> $DIR/suggest-closure-return-type-1.rs:2:24
   |
LL |     let _v = || -> _ { [] };
   |                        ^^ cannot infer type
help: give this closure an explicit return type without `_` placeholders
   |
LL |     let _v = || -> [_; 0] { [] };
   |                    ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
