src/test/ui/suggestions/suggest-closure-return-type-1.rs
fn main() {
    let _v = || -> _ { [] }; //~ ERROR type annotations needed for the closure
}
